--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
 
 
-    <title>HOME | Brest Cancer Detection</title>
+    <title>HOME | Breast Cancer Detection</title>
 </head>
 
 <body>
@@ -76,7 +76,7 @@
                 </div>
                 <script>
                     const d = new Date();
-                    let string = d.getDate() + "/" + d.getMonth() + "/" + d.getFullYear();
+                    let string = d.getDate() + "/" + (d.getMonth() + 1) + "/" + d.getFullYear();
                     document.getElementById("card-date").innerHTML = string;
                 </script>
             </div>
